# venu-clickup-notificator

./: .gitignore  CHANGELOG.md  README.md  README_UZ.md  YAXSHILANISHLAR.md  app.py  clickup-api-v2-reference.json  datas.txt  example.py  pyproject.toml  requirements.txt  set_webhook.txt
clickup/: __init__.py  sedn_task_to_tg.py
clickup/savdo/: __init__.py
clickup/savdo/when_broker_set/: __init__.py  components.py  when_broker_set.py
clickup/savdo/when_broker_set_dogovor/: __init__.py  components.py  when_broker_set_dogovor.py
clickup/savdo/when_buxgalter_get_money/: __init__.py  components.py  when_buxgalter_get_money.py
clickup/utils/: get_relation_name.py
clickup_sdk/: __init__.py  client.py
clickup_sdk/handlers/: __init__.py  attachments.py  base.py  comments.py  custom_fields.py  folders.py  goals.py  lists.py  spaces.py  tasks.py  teams.py  time_entries.py  users.py  webhooks.py
clickup_sdk/webhook/: __init__.py  dispatcher.py  events.py  filters.py  server.py
config/: __init__.py  config.py  settings.py
core/: __init__.py  clickup_client.py  dispatcher.py  logging_config.py  telegram_bot.py  webhook_manager.py
examples/: webhook_example.py  webhook_filter_example.py  webhook_simple_example.py
utils/: format_currency.py  format_dedline.py  format_number.py  get_curstom_field_value.py
