[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clickup-sdk"
version = "1.0.0"
description = "Python SDK for ClickUp API v2 - aiogram style"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9.0",
]
authors = [
    {name = "ClickUp SDK Contributors"}
]
keywords = ["clickup", "api", "sdk", "async", "aiogram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["clickup_sdk*"]

